--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-django>=1.8,<1.9
-django-debug-toolbar==1.5
-gunicorn==19.4.5
-psycopg2==2.6.1
-whitenoise==3.0
+Django>=1.11,<2.0
+django-debug-toolbar==1.8
+gunicorn==19.7.1
+psycopg2==2.7.1
+whitenoise==3.3.0
